# HamVerBot

./: .dockerignore  .env  .env.example  .gitignore  .releaserc  AGENT_SCRATCHPAD.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  bun.lockb  config.toml  docker-compose.yml  fly.toml  package.json  sqlx-data.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: bloat.yml  build.yml  clippy.yml  release.yml
.sqlx/: query-06618f76585abce3cdae1d8377ce745523d7856bbe4b1296c4a7999a82713345.json  query-10355835f1463d02dc7f0dbb082ac95d72e03262c1f40e589ba25bdb34726810.json  query-196c25c7a59839195e4600b8148721c7ab8f8d028c7100adfb5396dadbbaac52.json  query-3035cbf57d6b55e72dd5333b082036ed9cfc558aef0910df9415a79b9a96bbc1.json  query-38811962897065dc1e969ffbf4a1f26ff298c56417c8ca96b698e879a69adfc0.json  query-3d04d69a4b7fc469e1fb64b6466bc137829ce1bb2bdf9dc2db726b60e81cf238.json  query-3deeb58728a865aaeb1a4a1b3c76404a2685b036f38684a99ea9f69e839b996f.json  query-5a39f7ae4653b97fa75c0cc7bec55d3874fdcc2a7c47b2231963b7da44c13fc4.json  query-5c6cbae6e06313f1e3eaf1260af7e97ef19d394612f590e75b671fe36489ca83.json  query-89f89e39fe3f742dde2ef71f430e850c029457498a786f95584218ea7ee1482c.json  query-92b60bfe19047eff68004d0afe502a6d149225588901d297d6281fd55cd5e040.json  query-9babdef29a8df57498420de659195a85ca9421878f8948aa367dfd5ff7a7b575.json  query-adf1ad4dfb08d2cc69c7303541c277a2503a3e6ebe3415dcd4e5c1cc37ebb5dd.json  query-c89504f5d02d0606f7d5291e07f2b0fd87005031163392f76bb626c1b56ca1a6.json  query-d3099815719bafb4136686f941991fb0c7890d732728cfcada36fc08a27725ea.json  query-edcea1b2cf7c96719900fd384f370444ddd440410eb6007c9a3dc76ab4ab3a32.json  query-efd43aa61f438f50bf3151a3155ba55b96e35880f4412667e55be2f18a41e994.json
db/: schema.sql
migrations/: 20230603160512_init.sql  20230604064856_championship_standings.sql  20231007112625_driver_list.sql  20240309080129_sq.sql
py/: main.py  pyproject.toml
py/migrations/: 20231008092653_event_type.py  20231008094803_results.py  20231008094814_irc_channels.py  20231008094831_championship.py  20231008094840_driver_list.py
py/src/: db.py  fetch.py  message.py
scripts/: run-tests.ts  sync-turso-schema.ts
src/: app.ts  authenticate.rs  calendar.ts  config.rs  config.ts  database.rs  database.ts  event_results.rs  fetch.rs  fetch.ts  index.ts  irc.rs  irc.ts  live-timing-json.ts  live-timing.ts  main.rs  message.rs  message.ts  models.rs  next_event.rs  openf1.ts  worker.rs  worker.ts
src/types/: event-type.ts  irc-framework.d.ts  models.ts
src/utils/: events.ts
tests/: calendar.test.ts  calendar.unit.ts  config.test.ts  config.unit.ts  database.test.ts  fetch.test.ts  fetch.unit.ts  irc.test.ts  irc.unit.ts  live-timing.test.ts  live-timing.unit.ts  message.test.ts  message.unit.ts  utils-events.test.ts  worker.test.ts  worker.unit.ts  zz-index.test.ts
worker/f1live-proxy/: index.js  wrangler.jsonc
