[package]
name = "HamVerBot"
version = "0.1.0"
edition = "2021"
authors = ["Ayaan Zaidi <hi@obviy.us>"]
description = "Steward of #f1 on Libera.Chat"
license = "MIT"
repository = "https://github.com/obviyus/HamVerBot"


[dependencies]
irc = { version = "1.0", default-features = false, features = [
  "ctcp",
  "toml_config",
  "tls-rust",
] }
log = "0.4.22"
base64 = "0.22.1"
chrono = "0.4.38"
dotenv = "0.15.0"
env_logger = "0.11.5"
futures = "0.3.31"
reqwest = { version = "0.12.9", default-features = false, features = [
  "json",
  "rustls-tls",
  "http2",
] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.41.0", features = ["full"] }
tokio-cron-scheduler = "0.10.2"
anyhow = "1.0.92"
chrono-tz = "0.10.0"

# Defining bin here to make multi stage docker build work
[[bin]]
name = "HamVerBot"
path = "src/main.rs"
